# Django-Atut-Vidhan

./: .gitignore  railway.toml  requirements.txt  series.txt  start.sh
main/: pyproject.toml  railway.json  requirements.txt  start.sh
main/chat/: models.py  urls.py  views.py
main/chat/migrations/: 0001_initial.py  0002_chatmessage_delete_message.py
main/connect/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
main/connect/migrations/: 0001_initial.py  0002_chatmessage_file_url.py  0003_chatmessage_read_at_alter_chatmessage_message.py
main/main/: asgi.py  consumers.py  routing.py  settings.py  urls.py  views.py
main/plans/: admin.py  models.py  urls.py  views.py
main/plans/migrations/: 0001_initial.py  0002_remove_planfeature_plan_planfeature_plans_and_more.py
main/search/: urls.py  views.py
main/search/templatetags/: querystring_filters.py
main/siteadmin/: forms.py  models.py  urls.py  views.py
main/siteadmin/migrations/: 0001_initial.py
main/templates/admin/: base_site.html
main/templates/emails/: otp_email.html
main/templates/plans/: make_payment.html  premiumplans.html
main/templates/siteadmin/: create_premium_plan.html  page_create.html  page_edit.html  page_list.html
main/templates/user/: base.html  complete_profile.html  connections.html  index.html  plans.html  profile_detail.html  profile_details.html  search_page.html  testing_dashboard.html  user_dashboard.html
main/user/: admin.py  context_processors.py  email_utils.py  forms.py  models.py  urls.py  utils.py  views.py
main/user/migrations/: 0001_initial.py  (+23 more)
(+27 files in other folders)
