[project]
name = "atut-vidhan"
version = "1.0.0"
description = "Atut Vidhan Matrimony Django ASGI App"
authors = [
    { name = "Lakshay Jindal" }
]
dependencies = [
    "Django>=5.2.1",
    "channels>=4.2.2",
    "daphne>=4.2.1",
    "whitenoise>=6.9.0",
    "dj-database-url>=3.0.1",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1"
]

[tool.setuptools.packages.find]
where = ["main"]
